finished mobile version

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <main>
             <div class="container-main">
                 <a href="#"><img src="./images/logo.svg" alt=""></a>
-                <h1>We make your music <br>sound extraordinary.</h1>
+                <h1>We make your music sound extraordinary.</h1>
                 <p>A system audio equalizer specifically designed for Android and iOS. Freely tune the
                     way your music sounds with a professional grade parametric EQ & volume mixer. Control
                     bass, mids, treble, gain control, reverb, and more!</p>
@@ -23,7 +23,7 @@
             <div class="image-main">
                 <picture>
                     <source srcset="./images/bg-pattern-1.svg" media="(min-width: 600px)">
-                    <img src="" alt="pattern">
+                    <img src="" alt="">
                 </picture>
             </div>
         </main>
@@ -36,16 +36,21 @@
                 <h2>Premium EQ</h2>
                 <p>Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take
                     your listening experience to a whole new level and access all our incredible features!</p>
-                <p class="price">$4 <span class="per-month">/ month</span></p>
-                <button class="btn-ios"><img src="./images/icon-apple.svg" alt="apple"> iOS Download</button>
-                <button class="btn-android"><img src="./images/icon-android.svg" alt="android">Android Download</button>
+                <div class="price-per-month">
+                    <p class="price">$4 <span class="per-month">/ month</span></p>
+                </div>
+                <button class="btn-ios"><img class="img-btn" src="./images/icon-apple.svg" alt="apple">iOS
+                    Download</button>
+                <button class="btn-android"><img class="img-btn" src="./images/icon-android.svg" alt="android">Android
+                    Download</button>
             </article>
         </section>
         <footer>
             <nav>
                 <a href="#"><img src="./images/logo.svg" alt="equalizer logo"></a>
                 <p class="fine-print">All rights reserved © Equalizer 2021
-                    Have any problems? Contact us via social media or email us at <a href="#">equalizer@example.com</a>
+                    Have any problems? Contact us via social media or email us at <a class="email"
+                        href="#">equalizer@example.com</a>
                 </p>
                 <ul>
                     <li><img src="./images/icon-facebook.svg" alt="facebook"></li>
