updated max-widths from px to rem. changed margin/paddings rem to px

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="image-main">
                 <picture>
-                    <source class="testing" srcset="./images/bg-pattern-1.svg" media="(min-width: 740px)">
+                    <source class="testing" srcset="./images/bg-pattern-1.svg" media="(min-width: 46.25rem)">
                     <img src="" alt="">
                 </picture>
             </div>
